--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -5,23 +5,6 @@
 [class*="col-"] {
     padding: 16px;
 }
-/* .row {
-    display: flex;
-    flex-wrap: wrap;
-} */
-/* .col-3 {
-    width: 25%;
-}
-.col-4 {
-    width: 33.33%;
-}
-.col-6 {
-    width: 50%;
-}
-.col-8 {
-    width: 66%;
-} */
-
 
 /* medium devices */
 @media (min-width: 768px) {
@@ -29,8 +12,14 @@
         display: flex;
         flex-wrap: wrap;
     }
+    .col-md-4 {
+        width: 33.333%;
+    }
     .col-md-6 {
         width: 50%;
+    }
+    .col-md-8 {
+        width: 66.666%;
     }
 }
 
